# photo-renamer

./: Cargo.toml  README.md
src/: arguments.rs  main.rs
src/gatherer/: exif.rs  exiftool.rs  ffprobe.rs  file_create.rs  file_modify.rs  mod.rs
