[package]
name = "photo-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.1.1", features = ["cargo", "derive"] }
env_logger = "0.9.1"
kamadak-exif = "0.5.4"
log = "0.4.17"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
